# src/main.rs
@@ -1,27 +1,29 @@
 #[macro_use] extern crate rocket;
 
+use rocket::fairing::AdHoc;
 use std::fmt::Debug;
-use std::cmp::max;
 use std::collections::BTreeMap;
 use std::fs;
-use std::fs::File;
-use std::path::Path;
+use std::fs::{DirEntry, File};
+use std::path::{Path, PathBuf};
 use std::str::FromStr;
 use std::sync::RwLock;
-use home::home_dir;
 use rocket::fs::{FileServer};
-use rocket::{Data, State};
+use rocket::{fairing, Build, Rocket, State};
 use rocket_dyn_templates::{Template, context};
 use log::info;
-use rocket::data::ToByteUnit;
+use rocket::futures::{TryFutureExt, TryStreamExt};
 use rocket::serde::json::Json;
 use rocket::serde::Serialize;
 use serde::{Deserialize};
 use crate::table::Table;
+use rocket_db_pools::{Connection, Database};
+use sqlx::{FromRow, Row};
 
 #[cfg(test)]
 mod tests;
 mod table;
+mod api;
 
 // type Error = String;
 type Error = Box<dyn std::error::Error>;
@@ -63,55 +65,47 @@ struct QERadioRecord {
     time: String,
 }
 
-#[derive(Serialize, Deserialize, Clone, Debug)]
+#[derive(Serialize, Deserialize, FromRow, Clone, Debug)]
 struct EventInfo {
+    id: EventId,
     name: String,
-    api_key: String,
+    place: String,
+    date: String,
+}
+#[derive(Serialize, Deserialize, Clone, Debug)]
+struct Event {
+    info: EventInfo,
+    api_key: api::ApiKey,
 }
 const EVENT_FILE: &str = "event.yaml";
 const OCCHNGIN_FILE: &str = "occhgin.json";
 const QECHNGIN_FILE: &str = "qechgin.json";
 #[derive(Debug)]
-struct Event {
-    info: EventInfo,
+struct EventState {
+    event: Event,
     qe: Table<QERunsRecord>,
     oc: Table<OCheckListChangeSet>,
 }
-impl Event {
-    fn create(data_dir: &str, event_info: EventInfo) -> Result<(EventId, Event)> {
-        let (event_id, max_event_id) = find_event_by_api_key(data_dir, &event_info.api_key)?;
-        let event_id = if let Some(event_id) = event_id { event_id } else { max_event_id + 1 };
-        let event_dir = Path::new(data_dir).join(format!("{data_dir}/{:0>8}", event_id));
-        fs::create_dir_all(&event_dir)?;
-        let event_file = event_dir.join(EVENT_FILE);
-        info!("Creating event file: {:?}", event_file);
-        let f = File::create(event_file)?;
-        serde_yaml::to_writer(f, &event_info)?;
-        Ok((event_id, Self {
-            info: event_info,
-            qe: Table::<QERunsRecord>::new(&event_dir.join(QECHNGIN_FILE))?,
-            oc: Table::<OCheckListChangeSet>::new(&event_dir.join(OCCHNGIN_FILE))?,
-        }))
-    }
+impl EventState {
 }
-fn find_event_by_api_key(data_dir: &str, api_key: &str) -> Result<(Option<EventId>, EventId)> {
-    let mut max_event_id = 0;
-    let mut event_id = None;
-    if let Ok(dirs) = fs::read_dir(data_dir) {
-        for event_dir in dirs {
-            let event_dir = event_dir.map_err(|e| e.to_string())?;
-            let id = usize::from_str(&event_dir.file_name().to_string_lossy()).map_err(|e| e.to_string())?;
-            max_event_id = max(id, max_event_id);
-            let event_info_fn = event_dir.path().join(EVENT_FILE);
-            let event_info: EventInfo = serde_yaml::from_reader(fs::File::open(event_info_fn).map_err(|e| e.to_string())?).map_err(|e| e.to_string())?;
-            if event_info.api_key == api_key {
-                assert!(event_id.is_none());
-                event_id = Some(id);
-            }
-        }
-    }
-    Ok((event_id, max_event_id))
-}
+// fn find_event_by_api_key(data_dir: &str, api_key: &str) -> Result<(Option<EventId>, EventId)> {
+//     let mut max_event_id = 0;
+//     let mut event_id = None;
+//     if let Ok(dirs) = fs::read_dir(data_dir) {
+//         for event_dir in dirs {
+//             let event_dir = event_dir.map_err(|e| e.to_string())?;
+//             let id = usize::from_str(&event_dir.file_name().to_string_lossy()).map_err(|e| e.to_string())?;
+//             max_event_id = max(id, max_event_id);
+//             let event_info_fn = event_dir.path().join(EVENT_FILE);
+//             let event_info: EventInfo = serde_yaml::from_reader(fs::File::open(event_info_fn).map_err(|e| e.to_string())?).map_err(|e| e.to_string())?;
+//             if event_info.api_key == api_key {
+//                 assert!(event_id.is_none());
+//                 event_id = Some(id);
+//             }
+//         }
+//     }
+//     Ok((event_id, max_event_id))
+// }
 
 #[derive(Serialize, Deserialize, Clone, Debug)]
 #[allow(non_snake_case)]
@@ -157,9 +151,26 @@ impl Default for AppConfig {
     }
 }
 struct QxState {
-    events: BTreeMap<EventId, RwLock<Event>>,
+    events: BTreeMap<EventId, RwLock<EventState>>,
 }
 impl QxState {
+    async fn create_event(&mut self, mut db: Connection<Db>, mut event_info: EventInfo) -> Result<EventId> {
+        // NOTE: sqlx#2543, sqlx#1648 mean we can't use the pithier `fetch_one()`.
+        let results = sqlx::query(
+            "INSERT INTO events (name, place, date) VALUES (?, ?, ?) RETURNING id"
+        )
+            .bind(event_info.name)
+            .bind(event_info.place)
+            .bind(event_info.date)
+            .fetch(&mut **db)
+            .map_ok(|row| row.get::<u32, _>(0))
+            .try_collect::<Vec<_>>()
+            .await?;
+        let event_id = results.first().expect("returning results");
+        info!("Creating event id: {}", event_id);
+        Ok(*event_id as usize)
+    }
+
     fn add_oc_change_set(&self, event_id: EventId, change_set: OCheckListChangeSet) -> Result<()> {
         let mut event = self.events.get(&event_id).ok_or(format!("Invalid event Id: {event_id}"))?
             .write().unwrap();
@@ -186,7 +197,7 @@ fn load_test_oc_data(data_dir: &str) -> Vec<OCheckListChangeSet> {
 #[get("/")]
 fn index(state: &State<SharedQxState>) -> Template {
     let events = state.read().unwrap().events.iter()
-        .map(|(event_id, event)| (*event_id, event.read().unwrap().info.clone()) ).collect::<Vec<_>>();
+        .map(|(event_id, event)| (*event_id, event.read().unwrap().event.info.clone()) ).collect::<Vec<_>>();
     Template::render("index", context! {
         title: "Quick Event Exchange Server",
         events: events,
@@ -195,8 +206,7 @@ fn index(state: &State<SharedQxState>) -> Template {
 #[get("/event/<event_id>")]
 fn get_event(event_id: EventId, state: &State<SharedQxState>) -> Template {
     let state = state.read().unwrap();
-    let event = state.events.get(&event_id).unwrap().read().unwrap();
-    let event_info = &event.info;
+    let event_info = state.events.get(&event_id).expect("event id must exist").read().unwrap().event.info.clone();
     Template::render("event", context! {
             event_id,
             event_info,
@@ -205,10 +215,11 @@ fn get_event(event_id: EventId, state: &State<SharedQxState>) -> Template {
 #[get("/event/<event_id>/qe/chng/in")]
 fn get_qe_chng_in(event_id: EventId, state: &State<crate::SharedQxState>) -> Template {
     let state = state.read().unwrap();
-    let event = state.events.get(&event_id).unwrap().read().unwrap();
-    let event_name = &event.info.name;
-    let change_set = event.qe.get_records(0, None).unwrap();
+    let event_state = state.events.get(&event_id).unwrap().read().unwrap();
+    let event_name = &event_state.event.info.name;
+    let change_set = event_state.qe.get_records(0, None).unwrap();
     Template::render("qe-chng-in", context! {
+            event_id,
             event_name,
             change_set
         })
@@ -216,110 +227,78 @@ fn get_qe_chng_in(event_id: EventId, state: &State<crate::SharedQxState>) -> Tem
 #[get("/event/<event_id>/oc")]
 fn get_oc_changes(event_id: EventId, state: &State<crate::SharedQxState>) -> Template {
     let state = state.read().unwrap();
-    let event = state.events.get(&event_id).unwrap().read().unwrap();
-    let event_name = &event.info.name;
-    let change_set = event.oc.get_records(0, None).unwrap();
+    let event_state = state.events.get(&event_id).unwrap().read().unwrap();
+    let event_name = &event_state.event.info.name;
+    let change_set = event_state.oc.get_records(0, None).unwrap();
     Template::render("oc-changes", context! {
+            event_id,
             event_name,
             change_set
         })
 }
 
-#[get("/event/<event_id>/qe/chng/in?<offset>&<limit>")]
-fn api_get_qe_in_changes(event_id: EventId, offset: Option<i32>, limit: Option<i32>, state: &State<crate::SharedQxState>) -> Json<Vec<QERunsRecord>> {
-    let state = state.read().unwrap();
-    let event = state.events.get(&event_id).unwrap().read().unwrap();
-    let offset = offset.unwrap_or(0) as usize;
-    let lst = event.qe.get_records(offset, limit.map(|l| l as usize)).unwrap();
-    Json(lst)
+fn load_event(event_dir: &DirEntry) -> Result<(EventId, Event)> {
+    let event_id = usize::from_str(&event_dir.file_name().to_string_lossy())?;
+    let event: Event = serde_yaml::from_reader(fs::File::open(event_dir.path().join(EVENT_FILE))?)?;
+    //let event_state = EventState {
+    //    event,
+    //    qe: Table::<QERunsRecord>::new(&event_dir.path().join(QECHNGIN_FILE))?,
+    //    oc: Table::<OCheckListChangeSet>::new(&event_dir.path().join(OCCHNGIN_FILE))?,
+    //};
+    Ok((event_id, event))
 }
-#[post("/event/<event_id>/oc", data = "<data>")]
-async fn api_add_oc_change_set(event_id: EventId, data: Data<'_>, state: &State<crate::SharedQxState>) -> std::result::Result<(), String> {
-    let content = data.open(128.kibibytes()).into_string().await.map_err(|err| err.to_string())?;
-    let oc: OCheckListChangeSet = serde_yaml::from_str(&content).unwrap();
-    state.write().unwrap().add_oc_change_set(event_id, oc).map_err(|err| err.to_string())?;
-    Ok(())
-}
-const DEFAULT_DATA_DIR: &str = "/tmp/qxhttpd/data";
-const TEST_DATA_DIR: &str = "/tmp/test/qxhttpd/data";
-
-fn load_events(data_dir: &str) -> Result<Vec<(EventId, Event)>> {
-    let mut ret = Vec::new();
-    if let Ok(dirs) = fs::read_dir(data_dir) {
+fn load_events(state: &mut QxState) -> Result<()> {
+    if let Ok(dirs) = fs::read_dir(&state.data_dir) {
         for event_dir in dirs {
             let event_dir = event_dir?;
-            let event_id = usize::from_str(&event_dir.file_name().to_string_lossy())?;
-            let event_dir = event_dir.path();
-            let event_info: EventInfo = serde_yaml::from_reader(fs::File::open(event_dir.join(EVENT_FILE))?)?;
-            let event = Event {
-                info: event_info,
-                qe: Table::<QERunsRecord>::new(&event_dir.join(QECHNGIN_FILE))?,
-                oc: Table::<OCheckListChangeSet>::new(&event_dir.join(OCCHNGIN_FILE))?,
-            };
-            ret.push((event_id, event));
+            if let Ok((event_id, event)) = load_event(&event_dir) {
+                let event_dir = event_dir.path();
+                let event_state = EventState {
+                    event,
+                    qe: Table::<QERunsRecord>::new(&event_dir.join(QECHNGIN_FILE))?,
+                    oc: Table::<OCheckListChangeSet>::new(&event_dir.join(OCCHNGIN_FILE))?,
+                };
+                state.events.insert(event_id, RwLock::new(event_state));
+            } else {
+                error!("Failed to load event: {:?}", event_dir.file_name());
+            }
         }
     }
-    Ok(ret)
+    Ok(())
 }
-
 #[launch]
 fn rocket() -> _ {
-    let rocket = rocket::build()
+    let mut rocket = rocket::build()
         .attach(Template::fairing())
+        .attach(db_stage())
         .mount("/", FileServer::from("./static"))
         .mount("/", routes![
             index,
             get_event,
             get_oc_changes,
             get_qe_chng_in,
-        ])
-        .mount("/api/", routes![
-            api_get_qe_in_changes,
-            api_add_oc_change_set
         ]);
+    rocket = api::mount(rocket);
 
     let figment = rocket.figment();
     let mut cfg = AppConfig::default();
 
-    let data_dir = if cfg!(test) {
-        let _ = fs::remove_dir_all(TEST_DATA_DIR);
-        Some(TEST_DATA_DIR.to_string())
-    } else {
-        figment.extract_inner::<String>("qx_data_dir").ok()
-    };
-    let data_dir = if let Some(data_dir) = data_dir {
-        if data_dir.starts_with("~/") {
-            let home_dir = home_dir().expect("home dir");
-            home_dir.join(&cfg.data_dir[2 ..]).into_os_string().into_string().expect("valid path")
-        } else {
-            data_dir
-        }
-    } else { 
-        DEFAULT_DATA_DIR.to_string()
-    };
-    if data_dir.is_empty() {
-        panic!("empty data dir");
-    } else {
-        cfg.data_dir = data_dir;
-    }
-    let data_dir = cfg.data_dir.clone();
-    info!("QX data dir: {}", data_dir);
+    let create_demo_event = figment.extract_inner::<bool>("qx_create_demo_event").ok().unwrap_or(false);
 
     let rocket = rocket.manage(cfg);
 
-    let mut events = load_events(&data_dir).unwrap();
-    let load_sample_data = events.is_empty();
-    if events.is_empty() {
-        let (event_id, event) = Event::create(&data_dir, EventInfo { name: "test-event".to_string(), api_key: "123".to_string() }).unwrap();
-        events = vec![
-            (event_id, event),
-        ];
-    }
+    //let load_sample_data = events.is_empty();
     // let e:BTreeMap< crate::EventId, RwLock< crate::Event >> = BTreeMap::from_iter(events);
-    let state = QxState {
-        events: BTreeMap::from_iter(events.into_iter().map(|(event_id, event)| (event_id, RwLock::new(event)))),
+    let mut state = QxState {
+        events: Default::default(),
     };
-    if load_sample_data {
+    if create_demo_event {
+        state.create_event(EventInfo { name: "test-event".to_string(), place: "".to_string(), date: "".to_string() }).unwrap();
+    }
+    else {
+        load_events(&mut state).unwrap();
+    }
+    if create_demo_event {
         let oc_changes = load_test_oc_data("tests/oc/data");
         for s in oc_changes {
             state.add_oc_change_set(1, s).unwrap();
@@ -328,3 +307,26 @@ fn rocket() -> _ {
     rocket.manage(SharedQxState::new(state))
 }
 
+#[derive(Database)]
+#[database("qxdb")]
+struct Db(sqlx::SqlitePool);
+async fn run_migrations(rocket: Rocket<Build>) -> fairing::Result {
+    match Db::fetch(&rocket) {
+        Some(db) => match sqlx::migrate!("db/migrations").run(&**db).await {
+            Ok(_) => Ok(rocket),
+            Err(e) => {
+                error!("Failed to initialize SQLx database: {}", e);
+                Err(rocket)
+            }
+        }
+        None => Err(rocket),
+    }
+}
+
+pub fn db_stage() -> AdHoc {
+    AdHoc::on_ignite("SQLx Stage", |rocket| async {
+        rocket.attach(Db::init())
+            .attach(AdHoc::try_on_ignite("SQLx Migrations", run_migrations))
+            // .mount("/sqlx", routes![list, create, read, delete, destroy])
+    })
+}
