# src/tests.rs
@@ -1,6 +1,18 @@
 use rocket::local::blocking::Client;
-use rocket::http::{ContentType, Status};
+use rocket::http::{ContentType, Header, Status};
 use crate::{QERunsRecord};
+
+#[test]
+fn api_register_event() {
+    let client = Client::tracked(super::rocket()).unwrap();
+    let rq = client.post("/api/event/")
+        .header(Header::new("x-register-token", "28f40c17d8c2edba71b1f59d67de6964719c4e11"));
+    let resp = rq.dispatch();
+    assert_eq!(resp.status(), Status::Ok);
+    assert_eq!(resp.content_type(), Some(ContentType::JSON));
+    let records = resp.into_json::<Vec<QERunsRecord>>().unwrap();
+    assert_eq!(records.len(), 1);
+}
 
 #[test]
 fn api_qe_chng_in() {
